--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=java-jenkins-sonar
-sonar.sources=src/main/java
-sonar.tests=src/test/java
+sonar.sources=.
+sonar.tests=.
 sonar.java.binaries=.
